[package]
name = "ytls-extensions"
version = "0.0.1"
edition = "2021"
description = "yolox TLS extensions"
homepage = "https://github.com/yolotls/yolotls"
keywords = ["io", "uring", "epoll", "async"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yolotls/yolotls"
categories = ["science"]

[dev-dependencies]
hex = "0.4.3"
rstest = "0.26"
hex-literal = "1.1"
insta = "1.45"

[features]
default = []
std = []

[dependencies]
#hex = "0.4.3"
ytls-typed = { path = "../typed" }

[package.metadata.docs.rs]
features = []

