[package]
name = "ytls-server"
version = "0.0.1"
edition = "2021"
description = "yolox sans-io TLS server context"
homepage = "https://github.com/yolotls/yolotls"
keywords = ["io", "uring", "epoll", "async"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yolotls/yolotls"
categories = ["science"]

[dev-dependencies]
hex = "0.4.3"
rstest = "0.26"
hex-literal = "1.1"
ytls-rustcrypto = { path = "../crypto/rustcrypto" }
rand = { version = "=0.10.0-rc.5", default-features = false, features = ["thread_rng"] }
pem-rfc7468 = { version = "1", default-features = false, features = ["alloc"] }
#pkcs8 = { version = "=0.11.0-rc.8", default-featurs = false }
sec1 = { version = "=0.8.0-rc.10", default-features = false }

[features]
default = []
std = []

[dependencies]
ytls-extensions = { path = "../extensions" }
ytls-keys = { path = "../keys" }
ytls-traits = { path = "../traits" }
ytls-record = { path = "../record" }
ytls-typed = { path = "../typed" }
ytls-util = { path = "../util" }
rand_core = { version = "=0.10.0-rc-2", default-features = false }
# temp debug
hex = "0.4.3"

[package.metadata.docs.rs]
features = []

#[[example]]
#name = "listener"
