[package]
name = "ytls-util"
version = "0.0.1"
edition = "2021"
description = "yolox TLS util types"
homepage = "https://github.com/yolotls/yolotls"
keywords = ["io", "uring", "epoll", "async"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yolotls/yolotls"
categories = ["science"]

[dev-dependencies]

rstest = "0.26"
hex-literal = "1.1"
insta = "1.45"
criterion = "0.8"
hkdf = { version = "=0.13.0-rc.3", default-features = false }
sha2 = { version = "=0.11.0-rc.3", default-features = false }

[features]
default = []
std = []

[dependencies]
crypto-bigint = { version = "=0.7.0-rc.10", default-features = false }

[package.metadata.docs.rs]
features = []

[[bench]]
name = "bencher"
harness = false
