[package]
name = "ytls-rustcrypto"
version = "0.0.1"
edition = "2021"
description = "yolox TLS rustcrypto processor"
homepage = "https://github.com/yolotls/yolotls"
keywords = ["io", "uring", "epoll", "async"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yolotls/yolotls"
categories = ["science"]

[dev-dependencies]
hex = "0.4.3"
rstest = "0.26"
hex-literal = "1.1"
insta = "1.45"
criterion = "0.8"

[features]
default = []
std = []
zeroize = ["dep:zeroize"]

[dependencies]
ytls-traits = { path = "../../traits" }
x25519-dalek = { version = "=3.0.0-pre.3", default-features = false }
sha2 = { version = "=0.11.0-rc.3", default-features = false }
rand_core = { version = "=0.10.0-rc-2", default-features = false }
hkdf = { version = "=0.13.0-rc.3", default-features = false }
chacha20poly1305 = { version = "=0.11.0-rc.1", default-features = false }
hmac = { version = "=0.13.0-rc.3", default-features = false }
p256 = { version = "=0.14.0-rc.1", default-features = false, features = ["ecdsa"] }
zeroize = { version = "1.8", default-features = false, optional = true, features = ["derive"] }

[package.metadata.docs.rs]
features = []

#[[bench]]
#name = "bencher"
#harness = false
